# command-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
plugins/commit-guard/.claude-plugin/: plugin.json
plugins/commit-guard/hooks/: hooks.json
plugins/commit-guard/scripts/: commit_guard.sh
scripts/: command_guard.py
skills/command-guard/: SKILL.md
tests/: __init__.py  test_command_guard.py
tests/fixtures/: basic_rules.json
