[project]
name = "command-guard"
version = "1.0.0"
description = "Configurable guardrails for Claude Code - block commands, protect files, enforce workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{name = "golergka"}]

[project.urls]
Repository = "https://github.com/golergka/command-guard"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
